load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_binary")
load("@rules_jvm_external//:defs.bzl", "artifact")

kt_jvm_binary(
    name = "server_inline",
    srcs = ["ServerInline.kt"],
    main_class = "com.example.ServerInlineKt",
    deps = [
        artifact("io.ktor:ktor-server-netty-jvm"),
        artifact("io.ktor:ktor-server-core-jvm"),
        artifact("io.ktor:ktor-server-host-common-jvm"),
        artifact("io.ktor:ktor-http-jvm"),
    ],
)
